--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,16 @@
 }
 
 
-
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    background-image: url("/img/bgbody.png");
+body{
+    background-image: url('../img/bgbody.png');
     background-size: cover;
+    background-color: #0f53b1;
     font-family: sans-serif;
 }
 
@@ -30,7 +29,7 @@ body {
     height: 100vh;
     width: 100%;
     display: flex;
-    z-index: -1;
+    z-index: 0;
     justify-content: center;
     align-items: center;
 }
