--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 }
 
 body{
-    background-image: url('../img/body-bg.png');
+    background-image: url('../img/Body-bg.png');
     background-size: cover;
     background-color: #0f53b1;
     font-family: sans-serif;
