--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body{
     height: 35rem;
     width: 45rem;
     background-color: #fffbef90;
-    border-radius: 20px 0 40px 0;
+    border-radius: 40px 20px 40px 20px;
     box-shadow: 4px -1px 8px 5px rgba(0, 0, 0, 0.75) inset;
     -webkit-box-shadow: 4px -1px 8px 5px rgba(0, 0, 0, 0.75) inset;
     -moz-box-shadow: 4px -1px 8px 5px rgba(0, 0, 0, 0.75) inset;
